# clientserverrustgrpc

./: README.md  start.sh
.github/workflows/: client-cd.yml  client-ci.yml  server-cd.yml  server-ci.yml
docker/: README.md  docker-compose.yml
docker/keycloak/: Dockerfile
docker/keycloak/commands/: 00-realm-export.json  ImportRealm.sh  create_clients.sh  create_from_json.sh  create_groups.sh  create_realm.sh  create_roles.sh  create_users.sh  get_access_token.sh  role_exists.sh
docker/minio/: Dockerfile
docker/postgres/: Dockerfile  backup.sh
grpc-client/: Cargo.toml
grpc-client/src/: main.rs
grpc-server/: Cargo.toml  build.rs  keycloak_public_key.pem
grpc-server/src/: auth_interceptor.rs  main.rs
grpc-server/src/proto/: my_service.proto
